crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_Y2GN.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: Y2GN
input: "---\nkey: &an:chor value\n"
diagnostics:

cst:
DOCUMENT@0..24
  YAML_METADATA_CONTENT@0..24
    YAML_STREAM@0..24
      YAML_DOCUMENT@0..24
        YAML_DOCUMENT_START@0..3 "---"
        NEWLINE@3..4 "\n"
        YAML_BLOCK_MAP@4..24
          YAML_BLOCK_MAP_ENTRY@4..24
            YAML_BLOCK_MAP_KEY@4..8
              YAML_SCALAR@4..7 "key"
              YAML_COLON@7..8 ":"
            YAML_BLOCK_MAP_VALUE@8..24
              WHITESPACE@8..9 " "
              YAML_ANCHOR@9..17 "&an:chor"
              WHITESPACE@17..18 " "
              YAML_SCALAR@18..23 "value"
              NEWLINE@23..24 "\n"
