crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_YJV2.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: YJV2
input: "[-]\n"
diagnostics:
YAML_PARSE_INVALID_PLAIN_SCALAR_IN_FLOW:`-` cannot start a plain scalar in flow context@1..2
cst:
