crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_Z67P.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: Z67P
input: "literal: |2\n  value\nfolded: !foo >1\n value\n"
diagnostics:

cst:
DOCUMENT@0..43
  YAML_METADATA_CONTENT@0..43
    YAML_STREAM@0..43
      YAML_DOCUMENT@0..43
        YAML_BLOCK_MAP@0..43
          YAML_BLOCK_MAP_ENTRY@0..20
            YAML_BLOCK_MAP_KEY@0..8
              YAML_SCALAR@0..7 "literal"
              YAML_COLON@7..8 ":"
            YAML_BLOCK_MAP_VALUE@8..20
              WHITESPACE@8..9 " "
              YAML_SCALAR@9..20 "|2\n  value\n"
          YAML_BLOCK_MAP_ENTRY@20..43
            YAML_BLOCK_MAP_KEY@20..27
              YAML_SCALAR@20..26 "folded"
              YAML_COLON@26..27 ":"
            YAML_BLOCK_MAP_VALUE@27..43
              WHITESPACE@27..28 " "
              YAML_SCALAR@28..42 "!foo >1\n value"
              NEWLINE@42..43 "\n"
