crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_ZH7C.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: ZH7C
input: "&a a: b\nc: &d d\n"
diagnostics:

cst:
DOCUMENT@0..16
  YAML_METADATA_CONTENT@0..16
    YAML_STREAM@0..16
      YAML_DOCUMENT@0..16
        YAML_BLOCK_MAP@0..16
          YAML_BLOCK_MAP_ENTRY@0..8
            YAML_BLOCK_MAP_KEY@0..5
              YAML_ANCHOR@0..2 "&a"
              WHITESPACE@2..3 " "
              YAML_SCALAR@3..4 "a"
              YAML_COLON@4..5 ":"
            YAML_BLOCK_MAP_VALUE@5..8
              WHITESPACE@5..6 " "
              YAML_SCALAR@6..7 "b"
              NEWLINE@7..8 "\n"
          YAML_BLOCK_MAP_ENTRY@8..16
            YAML_BLOCK_MAP_KEY@8..10
              YAML_SCALAR@8..9 "c"
              YAML_COLON@9..10 ":"
            YAML_BLOCK_MAP_VALUE@10..16
              WHITESPACE@10..11 " "
              YAML_ANCHOR@11..13 "&d"
              WHITESPACE@13..14 " "
              YAML_SCALAR@14..15 "d"
              NEWLINE@15..16 "\n"
