crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_ZWK4.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: ZWK4
input: "---\na: 1\n? b\n&anchor c: 3\n"
diagnostics:

cst:
DOCUMENT@0..26
  YAML_METADATA_CONTENT@0..26
    YAML_STREAM@0..26
      YAML_DOCUMENT@0..26
        YAML_DOCUMENT_START@0..3 "---"
        NEWLINE@3..4 "\n"
        YAML_BLOCK_MAP@4..26
          YAML_BLOCK_MAP_ENTRY@4..9
            YAML_BLOCK_MAP_KEY@4..6
              YAML_SCALAR@4..5 "a"
              YAML_COLON@5..6 ":"
            YAML_BLOCK_MAP_VALUE@6..9
              WHITESPACE@6..7 " "
              YAML_SCALAR@7..8 "1"
              NEWLINE@8..9 "\n"
          YAML_BLOCK_MAP_ENTRY@9..13
            YAML_BLOCK_MAP_KEY@9..13
              YAML_KEY@9..10 "?"
              WHITESPACE@10..11 " "
              YAML_SCALAR@11..12 "b"
              NEWLINE@12..13 "\n"
            YAML_BLOCK_MAP_VALUE@13..13
          YAML_BLOCK_MAP_ENTRY@13..26
            YAML_BLOCK_MAP_KEY@13..23
              YAML_ANCHOR@13..20 "&anchor"
              WHITESPACE@20..21 " "
              YAML_SCALAR@21..22 "c"
              YAML_COLON@22..23 ":"
            YAML_BLOCK_MAP_VALUE@23..26
              WHITESPACE@23..24 " "
              YAML_SCALAR@24..25 "3"
              NEWLINE@25..26 "\n"
