crates/panache-parser/tests/snapshots/yaml__yaml_suite_2SXE.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: 2SXE
input: "&a: key: &a value\nfoo:\n  *a:\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
