crates/panache-parser/tests/snapshots/yaml__yaml_suite_57H4.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 57H4
input: "sequence: !!seq\n- entry\n- !!seq\n - nested\nmapping: !!map\n foo: bar\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
