crates/panache-parser/tests/snapshots/yaml__yaml_suite_6JWB.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: 6JWB
input: "foo: !!seq\n  - !!str a\n  - !!map\n    key: !!str value\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
