crates/panache-parser/tests/snapshots/yaml__yaml_suite_7ZZ5.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 7ZZ5
input: "---\nnested sequences:\n- - - []\n- - - {}\nkey1: []\nkey2: {}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
