crates/panache-parser/tests/snapshots/yaml__yaml_suite_9MMW.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: 9MMW
input: "- [ YAML : separate ]\n- [ \"JSON like\":adjacent ]\n- [ {JSON: like}:adjacent ]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
